crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_hash_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT HASH(column1) FROM employee_table\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'hash' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/hash",
)
