crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_semistructured_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT CHECK_JSON('{\\\"key\\\": \\\"value\\\"}')\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'check_json' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/check_json",
)
